--- a/indnex.html
+++ b/indnex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html onselectstart="return false">
 	<head>
-		<title>please enter your title</title>
+		<title>yellowMan</title>
 		<meta charset="utf-8">
 		<meta name="Author" >
 		<style type='text/css'>* {
@@ -42,28 +42,17 @@ body {
 	</head>
 	<body>
 		<div id="wrap">
-			<!--<img src="img/1.jpg"  />
-			<img src="img/2.jpg"  />
-			<img src="img/3.jpg"  />
-			<img src="img/4.jpg"  />
-			<img src="img/5.jpg"  />
-			<img src="img/6.jpg"  />
-			<img src="img/7.jpg"  />
-			<img src="img/8.jpg"  />
-			<img src="img/9.jpg"  />
-			<img src="img/10.jpg" />
-			<img src="img/11.jpg" />-->
-			<img src="iamge/1.gif"/>
-			<img src="iamge/2.gif"/>
-			<img src="iamge/3.gif"/>
-			<img src="iamge/4.gif"/>
-			<img src="iamge/5.jpg"/>
-			<img src="iamge/6.jpg"/>
-			<img src="iamge/7.jpg"/>
-			<img src="iamge/8.jpg"/>
-			<img src="iamge/9.gif"/>
-			<img src="iamge/10.gif"/>
-			<img src="iamge/11.png"/>
+			<img src="images/1.jpg"  />
+			<img src="images/2.jpg"  />
+			<img src="images/3.jpg"  />
+			<img src="images/4.jpg"  />
+			<img src="images/5.jpg"  />
+			<img src="images/6.jpg"  />
+			<img src="images/7.jpg"  />
+			<img src="images/8.jpg"  />
+			<img src="images/9.jpg"  />
+			<img src="images/10.jpg" />
+			<img src="images/11.jpg" />
 		</div>
 		<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 		<script type="text/javascript">eval(function(p, a, c, k, e, d) {
